# Hotel-Management-System

./: Admin.c  CMakeLists.txt  Last.c  Pabel.c  Panel.c  Panel_Reception.c  Panel_new.c  Panel_revised.c  README.md  Selection_Sort & Min_max.c  empinfo.txt  roominfo.txt
Algorithm/: BinarySearch.c  BubbleSort.c  LinearSearch.c  MergeSort.c  Min_max.c  QuickSort.c  SearchingAlgorithm.h  Selection_Sort.c  SortingAlgorithm.h
Algortihm/: BinarySearch.c  BubbleSort.c  CMakeLists.txt  LinearSearch.c  QuickSort.c  SortingAlgorithm.h  main.c  merge.c
data_folder/: customer_data.txt  empinfo.txt  roominfo.txt
