cmake_minimum_required(VERSION 3.26)
project(Hotel Management System)

set(CMAKE_C_STANDARD 17)

add_executable(Algorithm
        Algorithm/QuickSort.c
        Algorithm/BubbleSort.c
        Algorithm/SortingAlgorithm.h
        Algorithm/MergeSort.c
        Algorithm/BinarySearch.c
        Algorithm/LinearSearch.c
        Algorithm/Min_max.c
        Algorithm/QuickSort.c
        Algorithm/Selection_Sort.c
        Algorithm/SortingAlgorithm.h
        Panel.c
        Admin.c)
